# zine-life

./: .gitignore  BACKEND_TODO.txt  DATABASE_SETUP.md  ELEMENT_IDEAS.txt  PROJECT_TODO.TXT  README.md  UX_FLOW_DESIGN.md  svelte.config.js
.claude/: settings.local.json
backend/: .gitignore  Cargo.toml  Secrets.toml.example
backend/src/: lib.rs  main.rs
backend/src/auth/: jwt.rs  middleware.rs  mod.rs  oauth.rs
backend/src/constants/: api_routes.rs  auth.rs  cookies.rs  cors.rs  environment.rs  errors.rs  mod.rs
backend/src/entities/: design.rs  image.rs  mod.rs  session.rs  user.rs
backend/src/handlers/: auth.rs  csrf.rs  designs.rs  images.rs  mod.rs  thumbnails.rs
backend/src/middleware/: mod.rs  security.rs  validation.rs
backend/src/migrations/: m20250101_000001_create_initial_schema.rs  m20250101_000001_create_users_table.rs  m20250101_000002_create_designs_table.rs  m20250101_000003_create_sessions_table.rs  m20250716_000001_remove_redundant_design_fields.rs  m20250716_000002_create_images_table.rs  mod.rs
backend/src/services/: mod.rs  thumbnail.rs
backend/src/test_utils/: database.rs
backend/src/validation/: mod.rs  page_validation.rs
backend/tests/: api_tests.rs  auth_tests.rs  basic_api_tests.rs  design_api_tests.rs  entity_tests.rs.disabled  migration_tests.rs.disabled  simple_tests.rs.disabled  validation_tests.rs
frontend/: ADDING_NEW_ELEMENT_CATEGORIES.txt  CSRF_INTEGRATION.md  package-lock.json  package.json  svelte.config.js  vite.config.ts
frontend/.svelte-kit/: ambient.d.ts
frontend/src/: app.css  app.html
(+74 files in other folders)
