[package]
name = "zine-life-backend"
version = "0.1.0"
edition = "2024"

[dependencies]
# Web framework
actix-web = "4.9"
actix-cors = "0.7"

# Database
sea-orm = { version = "1.1", features = [
    "sqlx-postgres",
    "sqlx-sqlite",
    "runtime-tokio-rustls",
    "macros",
    "with-time",
    "with-uuid",
] }
sea-orm-migration = { version = "1.1", features = [
    "sqlx-postgres",
    "sqlx-sqlite", 
    "runtime-tokio-rustls",
] }

# Async runtime
tokio = { version = "1.0", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Authentication
oauth2 = "4.4"
jsonwebtoken = "9.3"

# HTTP client for OAuth
reqwest = { version = "0.12", features = ["json"] }

# Time handling (using std time + time crate for advanced features)
time = { version = "0.3", features = ["serde", "macros"] }

# Utilities
uuid = { version = "1.0", features = ["v4", "serde"] }
anyhow = "1.0"
thiserror = "1.0"

# Environment
dotenvy = "0.15"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# Shuttle.rs
shuttle-runtime = "0.55.0"
shuttle-actix-web = "0.55.0"
shuttle-shared-db = { version = "0.55.0", features = ["postgres"] }

[dev-dependencies]
# Testing
tokio-test = "0.4"
serde_json = "1.0"
tempfile = "3.13"
